# OEP-module

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
camera/: CMakeLists.txt  camera.hpp
camera/macos/: camera.mm
camera/windows/: camera.cpp  camera_device.hpp
cmake/: copy_libs.cmake  utils.cmake
interfaces/: api.hpp  camera.hpp  effect_player.hpp  formats.hpp  image_format.hpp  image_processing_result.hpp  offscreen_effect_player.hpp  offscreen_render_target.hpp  pixel_buffer.hpp  render_context.hpp  rgb_image.hpp
interfaces/c_api/: c_api_only.hpp  nv12_image.hpp
libraries/: CMakeLists.txt
libraries/c_api/: CmakeLists.txt  c_api_cpp_api_diff.hpp
libraries/c_api/camera/: CMakeLists.txt
libraries/c_api/camera/include/: camera_base.hpp
libraries/c_api/camera/platform/macos/: camera_mac.hpp  camera_mac.mm
libraries/c_api/camera/platform/windows/: camera_device.hpp  camera_win.cpp
libraries/camera/: CMakeLists.txt
libraries/camera/include/: camera_base.hpp
libraries/camera/platform/windows/: camera_device.hpp  camera_win.cpp  camera_win.hpp
libraries/renderer/: CMakeLists.txt
libraries/renderer/include/: frame_surface_handler.hpp  render_thread.hpp  renderer.hpp
libraries/renderer/src/: frame_surface_handler.cpp  render_thread.cpp  renderer.cpp
libraries/utils/: CMakeLists.txt
libraries/utils/glfw_utils/: CMakeLists.txt
libraries/utils/glfw_utils/include/: defs.hpp
libraries/utils/glfw_utils/src/: glfw_window.cpp
libraries/utils/ogl_utils/: CMakeLists.txt
libraries/utils/ogl_utils/include/: opengl.hpp  program.hpp  uniform.hpp
libraries/utils/ogl_utils/src/: opengl.cpp  program.cpp  uniform.cpp
oep_utils/: CMakeLists.txt
oep_utils/apple/: OEPUtilsForApple.h  OEPUtilsForApple.mm  utils.mm
offscreen_effect_player/: CMakeLists.txt  image_processing_result.cpp  image_processing_result.hpp  oep_api.hpp  oep_c_api_inline.hpp  oep_cpp_api_inline.hpp  offscreen_effect_player.cpp  offscreen_effect_player.hpp  pixel_buffer.cpp  pixel_buffer.hpp  thread_pool.h  yuv_converter.cpp  yuv_converter.hpp
offscreen_effect_player/api/: oep_cpp_api_inline.hpp
offscreen_effect_player/include/: offscreen_effect_player.hpp  pixel_buffer.hpp  yuv_converter.hpp
offscreen_effect_player/include/api/: oep_api.hpp  oep_c_api_inline.hpp  oep_cpp_api_inline.hpp
offscreen_effect_player/libyuv/: libyuv.cmake
offscreen_effect_player/libyuv/libyuv/: CMakeLists.txt
offscreen_effect_player/src/: offscreen_effect_player.cpp  pixel_buffer.cpp  yuv_converter.cpp
offscreen_render_target/: CMakeLists.txt  offscreen_render_target.cpp  offscreen_render_target.hpp  ort_android_inline.hpp  ort_api.hpp  ort_desktop_inline.hpp
offscreen_render_target/api/: ort_android_inline.hpp  ort_desktop_inline.hpp
offscreen_render_target/include/: offscreen_render_target.hpp
offscreen_render_target/include/api/: ort_android_inline.hpp  ort_api.hpp  ort_desktop_inline.hpp
offscreen_render_target/macos/: main_queue_runner.mm
offscreen_render_target/platform/: CMakeLists.txt
offscreen_render_target/platform/android/include/: offscreen_render_target.hpp
offscreen_render_target/platform/android/src/: offscreen_render_target.cpp
offscreen_render_target/platform/desktop/include/: offscreen_render_target.hpp
offscreen_render_target/platform/desktop/src/: offscreen_render_target.cpp
offscreen_render_target/src/: offscreen_render_target.cpp
opengl/: CMakeLists.txt  opengl.hpp  program.cpp  program.hpp  yuv_converter.cpp  yuv_converter.hpp
preprocessor/: CMakeLists.txt  build_macros.hpp  config.hpp.in
third/: CMakeLists.txt
third/libyuv/: CMakeLists.txt
